SERVER-70231 Fix Coverity analysis defect 122778: Using a moved object